# kaleidoscope

./: .editorconfig  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  LICENSE  README.md  hatch_build.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
benchmarks/: __init__.py  browser.ts  clips.py  common.py  memory.py  pipeline.py  run_browser.mjs
benchmarks/results/: t13-pipeline.json  t6-pipeline.json
docs/: architecture.md  installation.md  troubleshooting.md  usage.md
examples/: quickstart.ipynb
frontend/: comparison-view.ts  comparison.ts  index.ts  player.ts  protocol.ts  scheduler.ts  styles.css  time.ts
src/kaleidoscope/: __init__.py  api.py  cache.py  encoding.py  frame_adapter.py  protocol.py  py.typed  scheduler.py  session.py  sources.py  widget.py
src/kaleidoscope/static/: index.css  index.js
tasks/: benchmark-report.md  plan.md  spec.md  t13-benchmark-report.md  t13-release-readiness.md  todo.md
tests/: conftest.py
tests/e2e/: generate_fixture.py  player.spec.ts  smoke_hosts.mjs  smoke_hosts.py
tests/e2e/harness/: index.html  model.js
tests/frontend/: benchmark.test.ts  comparison-state.test.ts  comparison.test.ts  playback-lifecycle.test.ts  player.test.ts  protocol.test.ts  scheduler.test.ts  time.test.ts  widget.test.ts
tests/frontend/support/: fake-model.ts
tests/packaging/: check_branch_coverage.py  ipc_kernel_launcher.py  network_guard.c  network_probe.c  prepare_wheelhouse.py  smoke_artifacts.py  smoke_installed.py  smoke_installed_browser.mjs  smoke_installed_browser.py  smoke_installed_notebook.py  smoke_network_blocked.py  smoke_notebook.py  test_artifacts.py  test_ci.py  test_coverage_policy.py  test_release_toolchain.py  test_test_harnesses.py
tests/packaging/installed_browser_harness/: index.html  model.js
tests/python/: test_api.py  test_benchmark_common.py  test_benchmark_pipeline.py  test_cache.py  test_encoding.py  test_frame_adapter.py  test_protocol.py  test_scheduler.py  test_session.py  test_sources.py  test_widget.py
tests/typing/: api_consumer.py
