[build-system]
requires = [
  "hatchling>=1.27",
]
build-backend = "hatchling.build"

[project]
name = "vapoursynth-kaleidoscope"
version = "0.1.0"
description = "Real-time VapourSynth preview and comparison for Jupyter"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["jupyter", "vapoursynth", "video", "preview", "comparison"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Jupyter",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "anywidget>=0.11,<0.12",
  "numpy>=2.4,<3",
  "Pillow>=12.1,<13",
  "traitlets>=5.15,<6",
  "VapourSynth>=77,<78",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kaleidoscope"]

[tool.hatch.build.targets.wheel.force-include]
"examples/quickstart.ipynb" = "kaleidoscope/examples/quickstart.ipynb"

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE",
  "/README.md",
  "/docs",
  "/examples/quickstart.ipynb",
  "/src/kaleidoscope",
  "/tasks/benchmark-report.md",
  "/pyproject.toml",
]
exclude = ["/.gitignore"]

[tool.hatch.build.targets.sdist.hooks.custom]

[tool.hatch.envs.test]
skip-install = true
dependencies = [
  "anywidget>=0.11,<0.12",
  "hatchling>=1.27",
  "ipykernel>=7,<8",
  "nbclient>=0.10,<0.11",
  "nbformat>=5.10,<6",
  "numpy>=2.4,<3",
  "Pillow>=12.1,<13",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "VapourSynth>=77,<78",
]

[tool.hatch.envs.test.env-vars]
PYTHONPATH = "src"

[tool.hatch.envs.test.scripts]
artifact-smoke = "python tests/packaging/smoke_artifacts.py"
e2e-fixture = "python tests/e2e/generate_fixture.py"
notebook-smoke = "python tests/packaging/smoke_notebook.py"
prepare-wheelhouse = "python tests/packaging/prepare_wheelhouse.py"
pytest = "python -m pytest {args:tests/python tests/packaging}"

[tool.hatch.envs.lint]
detached = true
dependencies = ["ruff>=0.11,<0.12"]

[tool.hatch.envs.lint.scripts]
check = [
  "ruff check src tests/conftest.py tests/python tests/packaging",
  "ruff format --check src tests/conftest.py tests/python tests/packaging",
]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.15,<2",
  "anywidget>=0.11,<0.12",
  "numpy>=2.4,<3",
  "Pillow>=12.1,<13",
]

[tool.hatch.envs.types.scripts]
check = "mypy src/kaleidoscope tests/typing"

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests/python", "tests/packaging"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
